--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://NikaBotchorishvili.github.io/bussiness-card-react",
+  "homepage": "https://NikaBotchorishvili.github.io/bussiness-card-react/",
   "name": "reactproject",
   "private": true,
   "version": "0.0.0",
